--- a/app/src/main/res/layout/activity_trip_details.xml
+++ b/app/src/main/res/layout/activity_trip_details.xml
@@ -6,17 +6,61 @@
     android:layout_height="match_parent"
     tools:context=".TripDetailsActivity">
 
-    <Button
-        android:id="@+id/balbatton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="184dp"
-        android:layout_marginTop="256dp"
-        android:layout_marginEnd="134dp"
-        android:layout_marginBottom="427dp"
-        android:text="Button"
-        app:layout_constraintBottom_toBottomOf="parent"
+    <TextView
+        android:id="@+id/tripdetailsTextview"
+        android:layout_width="179dp"
+        android:layout_height="63dp"
+        android:layout_marginStart="42dp"
+        android:layout_marginTop="39dp"
+        android:layout_marginEnd="252dp"
+        android:gravity="center"
+        android:text="Trip Details"
+        android:textSize="24sp"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.225"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/tripdetailsTimeStampTextView"
+        android:layout_width="151dp"
+        android:layout_height="92dp"
+        android:layout_marginTop="48dp"
+        android:layout_marginBottom="536dp"
+        android:gravity="center"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.184"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tripdetailsTextview"
+        app:layout_constraintVertical_bias="0.617" />
+
+    <TextView
+        android:id="@+id/tripFareTextView"
+        android:layout_width="160dp"
+        android:layout_height="92dp"
+        android:layout_marginTop="48dp"
+        android:layout_marginBottom="536dp"
+        android:gravity="center"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.828"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tripdetailsTextview"
+        app:layout_constraintVertical_bias="0.595" />
+
+    <TextView
+        android:id="@+id/detailstextview"
+        android:layout_width="373dp"
+        android:layout_height="161dp"
+        android:layout_marginStart="40dp"
+        android:layout_marginEnd="53dp"
+        android:textSize="18sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.436"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
